modernize CORS config to use List.of() instead of Arrays.asList()
The CORS allowed methods, headers, and exposed headers are static
constants that should never be mutated. List.of() makes immutability
explicit, is more concise, and avoids the java.util.Arrays import.
Available since Java 9; we target Java 17.